--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cltools
-version = 2021.4.13
+version = 2021.4.16
 author = Nicolas Tessore
 author_email = n.tessore@ucl.ac.uk
 description = angular power spectrum tools metapackage
@@ -21,6 +21,7 @@ install_requires =
     # cltools
     convolvecl==2021.3.12
     interpcl==2021.4.13
+    lognormcl==2021.4.16
     sortcl==2021.3.11.1
     transformcl==2021.3.19
 
