--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cltools
-version = 2021.7.6
+version = 2021.9.28
 author = Nicolas Tessore
 author_email = n.tessore@ucl.ac.uk
 description = angular power spectrum tools metapackage
@@ -21,7 +21,7 @@ install_requires =
     # cltools
     convolvecl==2021.7.6
     interpcl==2021.5.20
-    normcl==2021.6.8
+    gaussiancl==2021.9.28
     sortcl==2021.4.16
     transformcl==2021.4.16
 
