--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = cltools
-version = 2021.10.21
+version = 2022.3.16
 author = Nicolas Tessore
 author_email = n.tessore@ucl.ac.uk
 description = angular power spectrum tools metapackage
@@ -24,6 +24,7 @@ install_requires =
     gaussiancl==2021.9.28
     sortcl==2021.10.11
     transformcl==2021.4.16
+    regularizecl==2022.3.16
 
 [options.extras_require]
 all=
